# FreeFlight

./: .gitignore  CMakeLists.txt  README.md  parameters.json  parameters_good_look.json
Game/: CMakeLists.txt
Game/source/: example.cpp  main.cpp
General/: CMakeLists.txt
General/include/: Typedefs.hpp
General/include/application/: Application.hpp  ApplicationParameters.hpp  ConcreteApplication.hpp  Gui.hpp  Scene.hpp  TestApplication.hpp
General/include/biomes/: Biome.hpp  BiomeManager.hpp  Desert.hpp  Field.hpp  Hills.hpp  Perlin.hpp  TestBiom.hpp  TestBiome.hpp  simplexnoise1234.h
General/include/bioms/: Biom.hpp
General/include/camera/: Camera.hpp
General/include/light/: Light.hpp  Material.hpp  SelestialLight.hpp
General/include/player/: Player.hpp  PlayerController.hpp  PlayerDependable.hpp  PlayerInfo.hpp
General/include/primitives/: Skybox.hpp  Square.hpp
General/include/random/: Generator.hpp
General/include/render/: DrawableUnit.hpp  Drawer.hpp  GraphicsInitializer.hpp  Program.hpp  ProgramContainer.hpp  RenderDefs.hpp  RenderInfo.hpp  Updatable.hpp  (+1 more)
General/source/: ApplicationParameters.cpp  BiomeManager.cpp  Camera.cpp  Containers.cpp  ProgramContainer.cpp  Terrain.cpp  simplexnoise1234.cpp
Test/: CMakeLists.txt
Test/source/: application_parameters.cpp
docs/architecture/: general.md  terrain.md
docs/ideas/: bioms.md  structures.md  полёт.md
resources/shaders/: Bindless.frag  Bindless.vert  Skybox.frag  Skybox.vert  Terrain.frag  Terrain.vert
shaders/: Basic.frag  Basic.vert  Instanced.vert  Lit.frag  Lit.vert  Terrain.vert
(+5 files in other folders)
